Fix align center not applying to profile modal message

--- a/frontend/pages/ManageControlsPage/OSSettings/cards/CustomSettings/components/ProfileUploader/components/AddProfileModal/_styles.scss
+++ b/frontend/pages/ManageControlsPage/OSSettings/cards/CustomSettings/components/ProfileUploader/components/AddProfileModal/_styles.scss
@@ -59,6 +59,10 @@
     gap: $pad-small;
   }
 
+  &__profile-graphic--message {
+    text-align: center;
+  }
+
   &__button-wrap {
     display: flex;
     justify-content: flex-end;
